--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 class="ibm-plex-sans-condensed-extralight">Jonathan Cola&ccedil;o Carr</h1>
 <div id="body-wrapper">
     <div id="greetings">
-        <h3 class="ibm-plex-sans-condensed-regular">Bonjour/Hi!</h3>
+        <h3 class="ibm-plex-sans-condensed-light">Bonjour/Hi!</h3>
     </div>
     <div id="bio" class="lora-light">
         <p>I'm a first-year Computer Science Master's student at McGill University and
@@ -20,9 +20,18 @@
         Precup. In June 2024 I'll be visiting the Center for Human-Compatible AI at UC Berkeley as a research intern.
         </p>
 
-        <p>My master's research revolves around learning from human feedback.
+        <p><b>Research Interests:</b> My research interests include reinforcement learning, foundation models and responsible AI.
+            My master's research revolves around learning from human feedback.</p>
+        <p><b>Background:</b>
         Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
         As an undergraduate I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group.
+        </p>
+    </div>
+    <div id="links" class="ibm-plex-sans-condensed-regular">
+        <p><b style="font-size:1.17em" class="ibm-plex-sans-condensed-light">You can find me on</b><br>
+            <a href="https://scholar.google.com/citations?user=IRKWTTwAAAAJ&hl=en">Google Scholar</a>,
+            <a href="https://github.com/j-c-carr/">Github</a> or
+            <a href="https://www.linkedin.com/in/jonathan-colaco-carr/">Linkedin</a>.
     </div>
 </div>
 </body>
