--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         Precup. In June 2024 I'll be visiting the Center for Human-Compatible AI at UC Berkeley as a research intern.
         </p>
 
-        <p><b>Research Interests:</b> My research interests include reinforcement learning, foundation models and responsible AI.
+        <p>My research interests include reinforcement learning, responsible AI and AI safety.
             My master's research revolves around learning from human feedback.</p>
-        <p><b>Background:</b>
+        <p>
         Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
         As an undergraduate I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group.
         </p>
     </div>
-    <div id="links" class="ibm-plex-sans-condensed-regular">
-        <p><b style="font-size:1.17em" class="ibm-plex-sans-condensed-light">You can find me on</b><br>
+    <div id="links" class="ibm-plex-sans-condensed-light">
+        <p><span style="font-size:1.17em">You can find my work on</span><br>
             <a href="https://scholar.google.com/citations?user=IRKWTTwAAAAJ&hl=en">Google Scholar</a>,
-            <a href="https://github.com/j-c-carr/">Github</a> or
+            <a href="https://github.com/j-c-carr/">GitHub</a> or
             <a href="https://www.linkedin.com/in/jonathan-colaco-carr/">Linkedin</a>.
     </div>
 </div>
