Update second year

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
         <h3 class="ibm-plex-sans-condensed-light">Bonjour/Hi!</h3>
     </div>
     <div id="bio" class="lora-light">
-        <p>I'm a first-year Computer Science Master's student at McGill University and
+        <p>I'm a second-year Computer Science master's student at McGill University and
         Mila, supervised by the dynamic duo of Prof. Prakash Panangaden and Prof. Doina
-        Precup. In June 2024 I'll be visiting the Center for Human-Compatible AI at UC Berkeley as a research intern.
+        Precup. In October 2024 I'll be joining Prof. Ben Van Roy's lab at Stanford University as a visiting student researcher.
+            From June - September 2024 I was a research intern at the Center for Human-Compatible AI (UC Berkeley),
+            advised by Cam Allen and Prof. Stuart Russell.
         </p>
-
-        <p>My research interests include reinforcement learning, responsible AI and AI safety.
-            My master's research revolves around learning from human feedback.</p>
-        <p>
-        Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
-        As an undergraduate I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group.
+        <p>My research interests include responsible AI, AI safety and the fundamentals of reasoning under uncertainty.
+            My master's research is focused on how to fine-tune large lanugage models from human feedback.
+        </p>
+        <p>Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
+        I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group as an undergraduate,
+            using machine learning to recover signals from noisy telescope data.
         </p>
     </div>
     <div id="links" class="ibm-plex-sans-condensed-light">
