--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             advised by Cam Allen and Prof. Stuart Russell.
         </p>
         <p>My research interests include responsible AI, AI safety and the fundamentals of reasoning under uncertainty.
-            My master's research is focused on how to fine-tune large lanugage models from human feedback.
+            My master's research is focused on how to fine-tune large language models from human feedback.
         </p>
         <p>Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
         I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group as an undergraduate,
