--- a/index.html
+++ b/index.html
@@ -5,35 +5,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <title>Jonathan Colaco Carr</title>
+    <title>Jonathan Cola&ccedil;o Carr</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1 class="ibm-plex-sans-condensed-extralight">Jonathan Cola&ccedil;o Carr</h1>
-<div id="body-wrapper">
-    <div id="greetings">
-        <h3 class="ibm-plex-sans-condensed-light">Bonjour/Hi!</h3>
+<div id="page-container">
+    <div id="content-wrap">
+    <h1>Jonathan Cola&ccedil;o Carr</h1>
+    <div id="email-wrapper">
+        <p>Email: <a href="mailto:jonathan.colacocarr@mail.mcgill.ca" class="noFrills">jonathan.colacocarr@mail.mcgill.ca</a></p>
     </div>
-    <div id="bio" class="lora-light">
-        <p>I'm a second-year Computer Science master's student at McGill University and
-        Mila, supervised by the dynamic duo of Prof. Prakash Panangaden and Prof. Doina
-        Precup. In October 2024 I'll be joining Prof. Ben Van Roy's lab at Stanford University as a visiting student researcher.
-            From June - September 2024 I was a research intern at the Center for Human-Compatible AI (UC Berkeley),
-            advised by Cam Allen and Prof. Stuart Russell.
-        </p>
-        <p>My research interests include responsible AI, AI safety and the fundamentals of reasoning under uncertainty.
-            My master's research is focused on reinforcement learning from human feedback.
-        </p>
-        <p>Before my master's I completed a bachelor's degree in the Honours Math program at McGill, with minors in Computer Science and Physics.
-        I spent one lovely summer in Prof. Adrian Liu's Cosmic Dawn group as an undergraduate,
-            using machine learning to recover signals from noisy telescope data.
-        </p>
-    </div>
+    <div id="body-wrapper">
+        <!--
+        <div id="greetings">
+            <h3>Bonjour/Hi!</h3>
+        </div>
+        -->
+        <div id="bio" class="lora-light">
+            <p>I'm a master's student in computer science at McGill University and
+            <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I'm supervised by <a href="https://www.cs.mcgill.ca/~prakash/" class="noFrills">
+                    Prakash Panangaden</a> and <a href="https://cs.mcgill.ca/~dprecup/" class="noFrills">Doina Precup</a>.
+                I've previously worked with <a href="https://web.stanford.edu/~bvr/" class="noFrills">Benjamin Van Roy</a> at Stanford on resolving group disagreements in sequential decision-making, and with Cam Allen and Stuart Russell at UC Berkeley on aligning reinforcement learning agents with underspecified human goals.
+                I like research about human-AI interaction because it gets at a simple but open question: what do we really want AI systems to do for us?
+            </p>
+
+            <!--
+            <p>My recent projects have asked a few simple questions:<br>
+            <ul>
+            <li><i>Which preference models can AI systems satisfy?</i> Many sequential decision-making algorithms assume that our goals can be captured by a single statistic (sometimes called ``reward'').
+                This is often not the case, and I've explored two alternative algorithms that can handle different kinds feedback.
+            </li>
+            <br>
+            <li><i>What is the "Helpful and Harmless" tradeoff? What resolves it?</i> After a thorough audit of this alledged trade-off in language models, this seemed less of a fundamental problem and more of a methodology problem.
+                I believe that adding structure to the data will help. I've shown that this works for agents in sequential decision-making tasks.
+            </li>
+            </ul>
+            </p>
+            -->
+            <p>
+                Outside of academia, I lead a small team of software developers at <a href="https://hortus.ai/" class="noFrills">Hortus AI</a>, an AI governance startup founded by Thomas Krendl Gilbert.
+                We’re building a public-sector AI marketplace that's designed to make partnerships transparent, ethical, and easy to navigate.
+            </p>
+            <p>I also hold a bachelor's degree in Honours Mathematics from McGill.
+                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I learned to code, I spent late nights at a sewing machine, making clothes with friends.
+            </p>
+            <p>
+                If you'd like to chat, please do reach out. I always enjoy hearing from new people.
+            </p>
+        </div>
+    <!--
     <div id="links" class="ibm-plex-sans-condensed-light">
         <p><span style="font-size:1.17em">You can find my work on</span><br>
             <a href="https://scholar.google.com/citations?user=IRKWTTwAAAAJ&hl=en">Google Scholar</a>,
             <a href="https://github.com/j-c-carr/">GitHub</a> or
             <a href="https://www.linkedin.com/in/jonathan-colaco-carr/">Linkedin</a>.
+    </div>
+    -->
+    </div>
     </div>
 </div>
 </body>
