Change groups to societal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>I'm a master's student in computer science at McGill University and
             <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I'm supervised by <a href="https://www.cs.mcgill.ca/~prakash/" class="noFrills">
                     Prakash Panangaden</a> and <a href="https://cs.mcgill.ca/~dprecup/" class="noFrills">Doina Precup</a>.
-                I've previously worked with <a href="https://web.stanford.edu/~bvr/" class="noFrills">Benjamin Van Roy</a> at Stanford on resolving group disagreements in sequential decision-making, and with Cam Allen and Stuart Russell at UC Berkeley on aligning reinforcement learning agents with underspecified human goals.
+                I've previously worked with <a href="https://web.stanford.edu/~bvr/" class="noFrills">Benjamin Van Roy</a> at Stanford on resolving societal disagreements in sequential decision-making, and with Cam Allen and Stuart Russell at UC Berkeley on aligning reinforcement learning agents with underspecified human goals.
                 I like research about human-AI interaction because it gets at a simple but open question: what do we really want AI systems to do for us?
             </p>
 
