--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="content-wrap">
     <h1>Jonathan Cola&ccedil;o Carr</h1>
     <div id="email-wrapper">
-        <p>Email: <a href="mailto:jonathan.colacocarr@mail.mcgill.ca" class="noFrills">jonathan.colacocarr@mail.mcgill.ca</a></p>
+        <p>Email: <a href="mailto:jonathan.colacocarr@mail.mcgill.ca" class="noFrills">jonathan.colacocarr@mail.mcgill.ca</a> | <a href="J_Colaco_Carr_CV_June_2025.pdf" class="noFrills">CV</a></p>
     </div>
     <div id="body-wrapper">
         <!--
@@ -47,7 +47,7 @@
                 We’re building a public-sector AI marketplace that's designed to make partnerships transparent, ethical, and easy to navigate.
             </p>
             <p>I also hold a bachelor's degree in Honours Mathematics from McGill.
-                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I learned to code, I spent late nights at a sewing machine, making clothes with friends.
+                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I learned to code, I spent late nights at a sewing machine, making clothes with my friends.
             </p>
             <p>
                 If you'd like to chat, please do reach out. I always enjoy hearing from new people.
