--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 We’re building a public-sector AI marketplace that's designed to make partnerships transparent, ethical, and easy to navigate.
             </p>
             <p>I also hold a bachelor's degree in Honours Mathematics from McGill.
-                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I learned to code, I spent late nights at a sewing machine, making clothes with my friends.
+                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I knew how to code, I spent many late nights at a sewing machine, making clothes with my friends.
             </p>
             <p>
                 If you'd like to chat, please do reach out. I always enjoy hearing from new people.
