--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="content-wrap">
     <h1>Jonathan Cola&ccedil;o Carr</h1>
     <div id="email-wrapper">
-        <p>Email: <a href="mailto:jonathan.colacocarr@mail.mcgill.ca" class="noFrills">jonathan.colacocarr@mail.mcgill.ca</a> | <a href="J_Colaco_Carr_CV_June_2025.pdf" class="noFrills">CV</a></p>
+        <p>Email: <a href="mailto:jonathan.colacocarr@mail.mcgill.ca" class="noFrills">jonathan.colacocarr@mail.mcgill.ca</a>
     </div>
     <div id="body-wrapper">
         <!--
@@ -22,11 +22,12 @@
         </div>
         -->
         <div id="bio" class="lora-light">
-            <p>I'm a master's student in computer science at McGill University and
-            <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I'm supervised by <a href="https://www.cs.mcgill.ca/~prakash/" class="noFrills">
-                    Prakash Panangaden</a> and <a href="https://cs.mcgill.ca/~dprecup/" class="noFrills">Doina Precup</a>.
-                I've previously worked with <a href="https://web.stanford.edu/~bvr/" class="noFrills">Benjamin Van Roy</a> at Stanford on resolving societal disagreements in sequential decision-making, and with Cam Allen and Stuart Russell at UC Berkeley on aligning reinforcement learning agents with underspecified human goals.
-                I like research about human-AI interaction because it gets at a simple but open question: what do we really want AI systems to do for us?
+            <p>I am finishing a master’s degree in computer science at McGill University and
+            <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I do research on decision-making algorithms that act both under uncertainty and towards a greater social good. For this, I use methods from political science, computational social choice, game theory, and reinforcement learning.
+            </p>
+
+            <p>
+                During the 2024&#8211;2025 academic year I was a visiting student researcher at Stanford, and prior to that I interned at the <a href="https://humancompatible.ai/" class="noFrills">Center for Human-Compatible AI</a> (UC Berkeley). My master’s research was supported by the NSERC Canada Graduate Scholarship and a Mitacs GlobaLink research award.
             </p>
 
             <!--
@@ -43,14 +44,12 @@
             </p>
             -->
             <p>
-                Outside of academia, I lead a small team of software developers at <a href="https://hortus.ai/" class="noFrills">Hortus AI</a>, an AI governance startup founded by Thomas Krendl Gilbert.
-                We’re building a public-sector AI marketplace that's designed to make partnerships transparent, ethical, and easy to navigate.
+                Outside of academia, I lead a small team of software developers at <a href="https://hortus.ai/" class="noFrills">Hortus AI</a>.
+                We’re creating a marketplace for public-sector AI that's designed to make partnerships transparent, ethical, and easy to navigate.
             </p>
-            <p>I also hold a bachelor's degree in Honours Mathematics from McGill.
-                Though I like math and computers, I'm naturally more of an arts-and-crafts person: long before I knew how to code, I spent many late nights at a sewing machine, making clothes with my friends.
-            </p>
+
             <p>
-                If you'd like to chat, please do reach out. I always enjoy hearing from new people.
+                I am looking for PhD opportunities! If you think I might be a good fit for your group, please do reach out. Here is my <a href="J_Colaco_Carr_CV_June_2025.pdf">CV</a>.
             </p>
         </div>
     <!--
