--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         -->
         <div id="bio" class="lora-light">
             <p>I am finishing a master’s degree in computer science at McGill University and
-            <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I do research on decision-making algorithms that act both under uncertainty and towards a greater social good. For this, I use methods from political science, computational social choice, game theory, and reinforcement learning.
+            <a href="https://mila.quebec/en" class="noFrills">Mila</a>, where I do research on decision-making algorithms that act both under uncertainty and towards a greater social good. For this, I use methods from computational social choice, game theory, and reinforcement learning.
             </p>
 
             <p>
-                During the 2024&#8211;2025 academic year I was a visiting student researcher at Stanford, and prior to that I interned at the <a href="https://humancompatible.ai/" class="noFrills">Center for Human-Compatible AI</a> (UC Berkeley). My master’s research was supported by the NSERC Canada Graduate Scholarship and a Mitacs GlobaLink research award.
+                During the 2024&#8211;2025 academic year I was a visiting student researcher at Stanford, and prior to that I was a research intern at UC Berkeley's <a href="https://humancompatible.ai/" class="noFrills">Center for Human-Compatible AI</a>. My master’s research was supported by the NSERC Canada Graduate Scholarship and a Mitacs GlobaLink research award.
             </p>
 
             <!--
@@ -49,7 +49,7 @@
             </p>
 
             <p>
-                I am looking for PhD opportunities! If you think I might be a good fit for your group, please do reach out. Here is my <a href="J_Colaco_Carr_CV_June_2025.pdf">CV</a>.
+                I am looking for PhD opportunities! If you think I might be a good fit for your group, please do reach out. Here is my <a href="J_Colaco_Carr_resume_Oct2025.pdf">resume</a>.
             </p>
         </div>
     <!--
